--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@formkit/auto-animate": "0.8.2",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "all": "0.0.0",
     "astro": "^4.7.0",
     "focus-trap-react": "10.2.3",
     "framer-motion": "11.1.9",
