--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "timesy",
+  "name": "timurr-android",
   "type": "module",
-  "version": "0.1.0",
+  "version": "1.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro dev --port 3000",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
